fix image of post too big when upload image too height

--- a/frontend/src/style/components/post.css
+++ b/frontend/src/style/components/post.css
@@ -38,6 +38,8 @@
     overflow: hidden;
 
     margin: 1rem 0;
+
+    max-height: 90rem;
 }
 
 .post .post-settings {
